--- a/css/fonts.css
+++ b/css/fonts.css
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: 'TT Octosquares Trl';
+  font-family: 'TT Octosquares Trl BOLD';
   src: url('../webfonts/TTOctosquaresTrl-Bd.woff2') format('woff2'),
        url('../webfonts/TTOctosquaresTrl-Bd.woff') format('woff');
   font-weight: 700;
