--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,30 +1,22 @@
 /* Webfont @font-face declarations for GitHub Pages hosting */
 /* Files live in /webfonts relative to this CSS file */
 /* font-display: swap keeps text visible while fonts load */
-
-@font-face {
+/* v2.8.2 — load RD fonts via absolute URLs (fixes broken ../webfonts paths) */
+@font-face{
   font-family: 'Magz';
-  src: url('../webfonts/Magz.woff2') format('woff2'),
-       url('../webfonts/Magz.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+  src: url('https://russiandood.github.io/RD-Fonts/webfonts/Magz.woff2') format('woff2'),
+       url('https://russiandood.github.io/RD-Fonts/webfonts/Magz.woff') format('woff');
+  font-weight: 400; font-style: normal; font-display: swap;
 }
-
-@font-face {
+@font-face{
   font-family: 'TT Octosquares Trl';
-  src: url('../webfonts/TTOctosquaresTrl-Rg.woff2') format('woff2'),
-       url('../webfonts/TTOctosquaresTrl-Rg.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+  src: url('https://russiandood.github.io/RD-Fonts/webfonts/TTOctosquaresTrl-Rg.woff2') format('woff2'),
+       url('https://russiandood.github.io/RD-Fonts/webfonts/TTOctosquaresTrl-Rg.woff') format('woff');
+  font-weight: 400; font-style: normal; font-display: swap;
 }
-
-@font-face {
+@font-face{
   font-family: 'TT Octosquares Trl BOLD';
-  src: url('../webfonts/TTOctosquaresTrl-Bd.woff2') format('woff2'),
-       url('../webfonts/TTOctosquaresTrl-Bd.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
+  src: url('https://russiandood.github.io/RD-Fonts/webfonts/TTOctosquaresTrl-Bd.woff2') format('woff2'),
+       url('https://russiandood.github.io/RD-Fonts/webfonts/TTOctosquaresTrl-Bd.woff') format('woff');
+  font-weight: 700; font-style: normal; font-display: swap;
 }
