--- a/css/fonts.css
+++ b/css/fonts.css
@@ -24,3 +24,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "IPAex Mincho";
+  src: url("https://russiandood.github.io/RD-Fonts/fonts/ipaex-mincho/regular/ipaexm.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
