--- a/css/fonts.css
+++ b/css/fonts.css
@@ -33,3 +33,12 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "IPAex ReallyScaryMinchotai";
+  src: url("/RD-Fonts/fonts/ipaex-mincho/regular/07ReallyScaryMinchotai.woff2") format("woff2"),
+       url("/RD-Fonts/fonts/ipaex-mincho/regular/07ReallyScaryMinchotai.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
